--- a/inventorymgt-server-client/inventorymgt-server/src/main/resources/application.properties
+++ b/inventorymgt-server-client/inventorymgt-server/src/main/resources/application.properties
@@ -6,9 +6,9 @@ spring.mvc.view.suffix = .jsp
 # = DATA SOURCE
 # ===============================
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url =jdbc:mysql://localhost:3306/employeesdb
-spring.datasource.username =geetha
-spring.datasource.password=fazil
+spring.datasource.url =jdbc:mysql://localhost:3306/inventorymgtdb
+spring.datasource.username =sai
+spring.datasource.password=sai@45
 
 # ===============================
 # JPA / HIBERNATE / with hsql
