--- a/inventorymgt-microunits/phonemgt-server/src/main/resources/application.properties
+++ b/inventorymgt-microunits/phonemgt-server/src/main/resources/application.properties
@@ -7,8 +7,8 @@ spring.mvc.view.suffix = .jsp
 # ===============================
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url =jdbc:mysql://localhost:3306/inventorymgtdb
-spring.datasource.username =bubbly
-spring.datasource.password=fazil
+spring.datasource.username =sai
+spring.datasource.password=sai@45
 
 # ===============================
 # JPA / HIBERNATE / with hsql
